[gd_scene load_steps=3 format=3 uid="uid://c4qp4rr360awu"]

[ext_resource type="Script" uid="uid://bpghqdhj2d4re" path="res://scripts/killzone.gd" id="1_xlapc"]
[ext_resource type="AudioStream" uid="uid://dkcr1bak5hx8k" path="res://assets/death.wav" id="2_kl8fp"]

[node name="Killzone" type="Area2D"]
collision_mask = 2
script = ExtResource("1_xlapc")

[node name="Timer" type="Timer" parent="."]
wait_time = 4.37
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_kl8fp")
bus = &"SFX"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
